--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta property="og:title" content="Subtech Form – Register Now">
+  <meta property="og:description" content="Fill the official Subtech form quickly and securely.">
+  <meta property="og:image" content="https://subtech.in/banner.jpeg">
+  <meta property="og:url" content="https://subtech.in/form/">
+  <meta property="og:type" content="website">
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,7 +27,8 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root"></div>
+
 </body>
 
 </html>
