--- a/freelancing/index.html
+++ b/freelancing/index.html
@@ -3,12 +3,25 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta charset="UTF-8" />
-  <meta property="og:title" content="Subtech Form – Register Now">
-  <meta property="og:description" content="Fill the official Subtech form quickly and securely.">
-  <meta property="og:image" content="https://subtech.in/banner.jpeg">
-  <meta property="og:url" content="https://subtech.in/form/">
-  <meta property="og:type" content="website">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="robots" content="noindex, nofollow" />
+
+<!-- Page Title -->
+<title>Freelancing Partner Registration - Subtech Private Limited</title>
+
+<!-- Open Graph / WhatsApp / Facebook -->
+<meta property="og:title" content="Join Subtech's Freelancing Network – Earn Selling Electrical Panels" />
+<meta property="og:description" content="Partner with Subtech to sell motor starter panels, ATS, AMF & VFD across India. Zero investment, attractive commissions, full technical support & training provided." />
+<meta property="og:image" content="https://subtech.in/images/freelancing-banner.jpeg" />
+<meta property="og:url" content="https://subtech.in/form/freelancing" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Subtech Private Limited" />
+
+<!-- Twitter Cards -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Join Subtech's Freelancing Network – Earn Selling Electrical Panels" />
+<meta name="twitter:description" content="Partner with Subtech to sell motor starter panels, ATS, AMF & VFD across India. Zero investment, attractive commissions, full support." />
+<meta name="twitter:image" content="https://subtech.in/images/freelancing-banner.jpeg" />
 
 
 
@@ -29,7 +42,8 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root"></div>
+
 </body>
 
 </html>
