Fix og:image path to use parent repo images folder

--- a/freelancing/index.html
+++ b/freelancing/index.html
@@ -10,18 +10,19 @@
 <title>Freelancing Partner Registration - Subtech Private Limited</title>
 
 <!-- Open Graph / WhatsApp / Facebook -->
-<meta property="og:title" content="Join Subtech's Freelancing Network – Earn Selling Electrical Panels" />
-<meta property="og:description" content="Partner with Subtech to sell motor starter panels, ATS, AMF & VFD across India. Zero investment, attractive commissions, full technical support & training provided." />
-<meta property="og:image" content="https://subtech.in/form/images/freelancing-banner.jpeg" />
+<meta property="og:title" content="Earn from home (Part Time)| Share with your 3 friends" />
+<meta property="og:image" content="https://subtech.in/images/freelancing-banner.jpeg" />
+ 
 <meta property="og:url" content="https://subtech.in/form/freelancing" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Subtech Private Limited" />
 
 <!-- Twitter Cards -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Join Subtech's Freelancing Network – Earn Selling Electrical Panels" />
-<meta name="twitter:description" content="Partner with Subtech to sell motor starter panels, ATS, AMF & VFD across India. Zero investment, attractive commissions, full support." />
-<meta name="twitter:image" content="https://subtech.in/form/images/freelancing-banner.jpeg" />
+<meta name="twitter:title" content="Earn from home (Part Time)| Share with your 3 friends" />
+<meta property="og:image" content="https://subtech.in/images/freelancing-banner.jpeg" />
+ 
+<meta name="twitter:image" content="https://subtech.in/images/freelancing-banner.jpeg" />
 
 
 
