--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Outfit:wght@500;600;700;800&display=swap"
     rel="stylesheet" />
+ <link href="https://fonts.googleapis.com/css2?family=Calmingly&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
